--- a/Frontend/src/pages/Registration/Registration.css
+++ b/Frontend/src/pages/Registration/Registration.css
@@ -5,7 +5,7 @@
   text-align: center;
   border: 1px solid #eee; /* Lighter border */
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color: white;
   margin-bottom: 25px;
   margin-top: 100px; /* Added top margin for spacing */
   height: 700px; /* Allow height to adjust based on content */
