--- a/Frontend Vehicle/src/pages/Registration/Registration.css
+++ b/Frontend Vehicle/src/pages/Registration/Registration.css
@@ -7,7 +7,7 @@
     border-radius: 8px;
     background-color: white;
     margin-bottom: 25px;
-    margin-top: 100px; /* Added top margin for spacing */
+    margin-top: 200px; /* Ensure content is displayed below the navbar */
     height: 700px; /* Allow height to adjust based on content */
   }
   
@@ -117,4 +117,3 @@
   .next-button:hover {
     background-color: #cc8400;
   }
-  
