--- a/Frontend Vehicle/src/pages/Registration/Registration.css
+++ b/Frontend Vehicle/src/pages/Registration/Registration.css
@@ -8,7 +8,7 @@
   border-radius: 8px;
   background-color: #f9f9f9;
   margin-bottom: 25px;
-  margin-top: 120px; /* Adjusted top margin to account for navbar height */
+  margin-top: 400px;
   height: auto; /* Allow height to adjust based on content */
 }
 
