--- a/Frontend Vehicle/src/Components/Navbar.css
+++ b/Frontend Vehicle/src/Components/Navbar.css
@@ -136,7 +136,7 @@
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
-    z-index: 1;
+    z-index: 998;
     padding: 16px 0;
     width: 100vw;
   }
@@ -151,5 +151,12 @@
     width: 100%;
     display: block;
     padding: 16px;
+  }
+
+  .logout-btn {
+    width: 90%;
+    margin: 8px auto;
+    padding: 12px;
+    text-align: center;
   }
 }
