--- a/Frontend Admin/src/Pages/DashboardFuelStation.css
+++ b/Frontend Admin/src/Pages/DashboardFuelStation.css
@@ -50,11 +50,19 @@
   text-decoration: none;
   font-weight: bold;
   background-color: rgb(255, 255, 255);
+  border: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
 }
 
 .dropdown-item:hover {
   background-color: #f5f5f5;
   border: #fdfdfd;
+}
+
+.logout-button {
+  color: #f44336;
 }
 
 .button-container {
