--- a/Frontend Vehicle/src/pages/Registration/Registration.css
+++ b/Frontend Vehicle/src/pages/Registration/Registration.css
@@ -10,11 +10,12 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  min-height: calc(100vh - var(--navbar-height) - 100px);
+  /* min-height: calc(100vh - var(--navbar-height) - 100px); */
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow: auto;
+  height: 500px;
 }
 
 .registration-container h2 {
